# PySSA

./: .gitignore  .pre-commit-config.yaml  .pse  .pylintrc  .pymolrc.py  .ruff.toml  CITATION.cff  README.md  __init__.py  code_rules.md  environment.yaml  environment_dev.yaml  main.py  main_alt.py  mypy.ini  pyproject.toml  pyssa_wo_pymol_env.yaml  pyssa_wo_pymol_env_002.yml  requirements.txt  requirements_dev.txt  setup.py  setup_build_tasks.py  setup_util.py  test.py  testing_colab.py  version_history.json
src/python/pyssa/: pyproject.toml
src/python/pyssa/extension/mv_wrappers/abstract_wrapper/: imv_client.py  isession_manager.py
src/python/pyssa/extension/mv_wrappers/chimerax_wrapper/: chimerax_pydd_client.py  chimerax_session_manager.py
src/python/pyssa/gui/abstract_interfaces/: icomponent.py
src/python/pyssa/gui/base_classes/: base_controller.py  base_dialog.py
src/python/pyssa/gui/components/: create_project_component.py  import_ligand_component.py  import_protein_component.py  import_sequence_component.py  open_project_component.py  save_protein_component.py
src/python/pyssa/gui/control/: create_project_controller.py  fasta_file_import_preview_controller.py  import_ligand_controller.py  import_protein_controller.py  import_sequence_controller.py  open_project_controller.py  preview_import_ligand_controller.py  save_protein_controller.py
src/python/pyssa/gui/custom_widgets/: color_grid.py  custom_button.py  custom_label.py  inline_menu.py  line_edit_search.py  molecule_naming.py  popup_dialog.py  ribbon_bar.py  side_tabs.py
src/python/pyssa/gui/dialog/: dialog_create_project.py  dialog_fasta_file_import_preview.py  dialog_import_ligand.py  dialog_import_protein.py  dialog_import_sequence.py  dialog_open_project.py  dialog_preview_import_ligand.py
src/python/pyssa/gui/dialog/forms/: create_project_dialog.ui  dialog_create_project.ui  dialog_fasta_file_import_preview.ui  dialog_import_ligand.ui  dialog_import_protein.ui  dialog_open_project.ui  dialog_preview_import_ligand.ui
src/python/pyssa/gui/main/: main.py  main_frame.py  main_frame_controller.py  main_view.py  main_view_controller.py
src/python/pyssa/gui/main/forms/: main_view.ui
src/python/pyssa/gui/main/new_ui/: main_frame.py  main_frame_controller.py
src/python/pyssa/gui/util/: custom_message_box.py  import_ligand_component.py  import_protein_component.py  import_sequence_component.py  input_validator.py  status_bar_manager.py  ui_util.py
src/python/pyssa/model/central_objects/: ligand.py  project.py  protein.py  protein_ligand_complex.py  protein_protein_complex.py  sequence.py  settings.py
src/python/pyssa/model/central_objects/dummy/: dummy_protein.py  dummy_protein_ligand_complex.py  dummy_protein_protein_complex.py
src/python/pyssa/model/data_classes/: ligand_preview.py  selection_filter.py  workspace_project.py
src/python/pyssa/model/database/: common_query_statements.py  database_handler.py  database_request.py  databases_manager.py  sql_query.py  unified_database_access.py
src/python/pyssa/model/preference/: central_objects_definitions.py  model_definitions.py
src/python/pyssa/model/pyssa_logging/: default_logging.py
src/python/pyssa/model/qmodel/: base_tree_model.py  ligand_model.py  project_model.py  protein_model.py  sequence_model.py
src/python/pyssa/model/util/: component_manager.py  enums.py  exception.py  hash_map.py
(+1209 files in other folders)
