[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyssa"
description = "A python rich client appplication for visual protein structure prediction and analysis."
license = { text = "GPL-3.0-only" }
authors = [
    {name = "Martin Urban", email =  "martin.urban@studmail.w-hs.de"},
    {name = "Hannah Kullik", email =  "hannah.kullik@studmail.w-hs.de"}
]
maintainers = [
    {name = "Martin Urban", email =  "martin.urban@studmail.w-hs.de"},
    {name = "Hannah Kullik", email =  "hannah.kullik@studmail.w-hs.de"}
]
requires-python = '>=3.11'
version = "1.0.1"

[tool.pyink]
pyink-indentation = 2
pyink-use-majority-quotes = true
line-length = 80
preview = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "__init__.py",
]
line-length = 80
indent-width = 2

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "F401",  # unused-import
    #  "ANN101",  # Missing type annotation
    "D208",  # Docstring is over-indented
    #  "E501",  #  Line too long (x > 80)
    "ANN201",  #  Missing return type annotation for public function
    #  "D212",  #  Multi-line docstring summary should start at the first line
    "A003",  # builtin-attribute-shadowing
    "W291",  # trailing-whitespace
    "PTH110",  # `os.path.exists()` should be replaced by `pathlib.Path.exists()`
    "Q000",   # Single quotes found but double quotes preferred
]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
# Full list of rules: https://docs.astral.sh/ruff/rules/
fixable = ["D208", "W291", "PTH110"]
unfixable = []

[tool.ruff.format]
indent-style = "space"

[tool.mypy]
python_version = "3.11"
exclude = '''(src/pyssa/pyssa_colabfold/* )'''
